# 3DDFA_V2

./: pyproject.toml  setup.py
DFA3D_V2/: TDDFA.py  TDDFA_ONNX.py  demo_video_smooth.py
DFA3D_V2/bfm/: bfm.py  bfm_onnx.py
DFA3D_V2/utils/: depth.py  functions.py  onnx.py
